# action-list

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e46a521e5c1_added_a_new_colum_address_in_company_.py  35cb1055b50e_initial_schema.py  55fd0813c98f_added_tasks_table.py  7811527b1c67_create_new_table_users.py  8fdfef61dc31_added_a_new_colum_due_date.py  9382bd03c39f_created_company_model.py  a3a72d1301d9_adding_additional_columns.py
app/: database.py  models.py
app/crud/: tasks.py
app/models/: __init__.py  tasks.py  user.py  users.py
app/routers/: auth.py  search.py  tasks.py  user.py
app/schemas/: tasks.py  user.py
todo_app/: pyproject.toml
